update img layout to prevent overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ li {
 
 img {
   max-height: 95%;
-  max-width: 100vw;
+  max-width: 100%;
   text-align: center;
 }
 
@@ -189,9 +189,10 @@ span {
 }
 .leisure {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   margin: 0 auto;
-  height: 300px;
+  width: 95%;
+  /* height: 300px; */
   vertical-align: baseline;
 }
 .leisure img {
@@ -214,9 +215,9 @@ video {
 }
 #quartets {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   margin: 5 auto;
-  height: 280px;
+  /* height: 280px; */
   width: 95%;
   justify-content: center;
   padding-top: 25px;
